--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,22 @@
   --foreground: #171717;
 }
 
+@font-face {
+  font-family: "Chillax";
+  src: url("/Fonts/WEB/fonts/Chillax-Regular.woff") format("woff2"),
+    url("/Fonts/WEB/fonts/Chillax-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Chillax";
+  src: url("/Fonts/WEB/fonts/Chillax-Bold.woff2") format("woff2"),
+    url("/Fonts/WEB/fonts/Chillax-Bold.woff2") format("woff");
+  font-weight: 700; /* Bold */
+  font-style: normal;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
